JDK-8245703 : 32-bit build failures after JDK-8243392
  • Type: Bug
  • Component: hotspot
  • Sub-Component: runtime
  • Affected Version: 15
  • Priority: P2
  • Status: Closed
  • Resolution: Fixed
  • Submitted: 2020-05-25
  • Updated: 2025-10-29
  • Resolved: 2020-05-25
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 15 JDK 17
15 b25Fixed 17.0.17-oracleFixed
Related Reports
Relates :  
Description
x86_32, for example:

* For target hotspot_variant-server_libjvm_objs_metaspaceShared.o:
/home/shade/trunks/jdk-jdk/src/hotspot/share/memory/metaspaceShared.cpp: In static member function 'static void MetaspaceShared::initialize_dumptime_shared_and_meta_spaces()':
/home/shade/trunks/jdk-jdk/src/hotspot/share/memory/metaspaceShared.cpp:261:3: error: 'check_SharedBaseAddress' was not declared in this scope
   check_SharedBaseAddress();
   ^~~~~~~~~~~~~~~~~~~~~~~
/home/shade/trunks/jdk-jdk/src/hotspot/share/memory/metaspaceShared.cpp:261:3: note: suggested alternative: 'SharedBaseAddress'
   check_SharedBaseAddress();
   ^~~~~~~~~~~~~~~~~~~~~~~
   SharedBaseAddress
At global scope:
cc1plus: error: unrecognized command line option '-Wno-cast-function-type' [-Werror]
cc1plus: all warnings being treated as errors

Comments
[~shade], could you please confirm that the defect is fixed in jdk15 w/ the patch? if it's so, please close/verify this bug as 'verified'
15-07-2020

URL: https://hg.openjdk.java.net/jdk/jdk/rev/aafb31b8a24b User: shade Date: 2020-05-25 09:04:53 +0000
25-05-2020

RFR: https://mail.openjdk.java.net/pipermail/hotspot-runtime-dev/2020-May/039708.html
25-05-2020