8245703: 32-bit build failures after JDK-8243392

Reviewed-by: dholmes, stuefe